feature: implementação de I18n  ( internacionalização ) nas views do projeto

--- a/app/views/articles/_about.html.erb
+++ b/app/views/articles/_about.html.erb
@@ -1,4 +1,4 @@
 <div class="p-4 mb-3 bg-dark rounded text-light">
-    <h4 class="fst-italic">About</h4>
-    <p class="mb-0" style="text-align: justify;">Hello user! I'm Eduardo Reche, a Brazilian full-stack developer with a passion for softwares and technology. I strive to balance creativity and professionalism in all my projects. Be sure to check out this website for some of the skills I bring to the table!</p>
+    <h4 class="fst-italic"><%= t('articles.about.title')%></h4>
+    <p class="mb-0" style="text-align: justify;"><%= t('articles.about.description')%></p>
 </div>
