--- a/app/views/articles/_elsewhere.html.erb
+++ b/app/views/articles/_elsewhere.html.erb
@@ -1,5 +1,5 @@
 <div class="p-4">
-    <h4 class="fst-italic mb-3">Elsewhere</h4>
+    <h4 class="fst-italic mb-3"><%= t('articles.elsewhere')%></h4>
     <ol class="list-unstyled d-flex flex-column gap-2">
       <li>
         <a href="https://github.com/RecheEduardo" target="_blank" class="btn scale-btn bg-gradient bg-dark text-light">
