--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,9 +7,7 @@
             Blogalizando
           </h6>
           <p>
-            My name is Eduardo Reche, and I’m a Brazilian full-stack developer 
-            with a passion for softwares and technology. Be sure to check 
-            out my blog for some of the skills I bring to the table!
+            <%= t('app.footer.about_me')%>
           </p>
         </div>
 
@@ -17,26 +15,26 @@
 
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
           <h6 class="text-uppercase mb-4 font-weight-bold">
-            Another projects
+            <%= t('app.footer.another_projects')%>
           </h6>
           <p>
             <a class="text-white" href="https://themed-quiz.vercel.app/" target="_blank">
-              React Quiz
+              <%= t('app.footer.project_1')%>
             </a>
           </p>
           <p>
             <a class="text-white" href="https://recheeduardo.github.io/EduardoReche-Portfolio/" target="_blank">
-              Personal Portfolio
+              <%= t('app.footer.project_2')%>
             </a>
           </p>
           <p>
             <a class="text-white" href="https://sportlife.vercel.app/" target="_blank">
-              Sportlife Showcase
+              <%= t('app.footer.project_3')%>
             </a>
           </p>
           <p>
             <a class="text-white" href="https://recheeduardo.github.io/TodoList/" target="_blank">
-              ToDo List
+              <%= t('app.footer.project_4')%>
             </a>
           </p>
         </div>
