--- a/app/views/articles/_archives.html.erb
+++ b/app/views/articles/_archives.html.erb
@@ -1,9 +1,9 @@
 <div class="p-4">
-    <h4 class="fst-italic">Archives</h4>
+    <h4 class="fst-italic"><%= t('articles.archives')%></h4>
     <ol class="list-unstyled mb-0">
         <% @archives.each do | timestamp, count | %>
             <li>
-                <%= link_to "#{timestamp} (#{count})", articles_path(month_year: timestamp), 
+                <%= link_to "#{timestamp.capitalize} (#{count})", articles_path(month_year: timestamp), 
                 class: " #{'category-active' if timestamp == params[:timestamp]}" %>
             </li>
         <% end %>
