--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -2,11 +2,11 @@
     <strong class="d-inline-block text-secondary"><%= article.category.name if article.category %></strong>
     <h2 class="blog-post-title my-2"><%= article.title %></h2>
     <p class="blog-post-meta">
-        <%= m_d_comma_y(article.created_at) %> by
+        <%= m_d_comma_y(article.created_at) %> <%= t('app.word.by')%>
         <span class="text-secondary fw-bold"><%= sub_masked_email(article.user.email) if article.user %>
     </p>
     <!-- Helper para formatar textos grandes nos artigos da home -->
     <p style="text-align: justify;"><%= truncate(article.body, length: 300) %></p>
     
-    <%= link_to "See more...", article, class: 'btn btn-primary'%>
+    <%= link_to t('articles.see_more'), article, class: 'btn btn-primary'%>
 </article>
