--- a/app/views/articles/_medium_featured.html.erb
+++ b/app/views/articles/_medium_featured.html.erb
@@ -4,11 +4,11 @@
       <strong class="d-inline-block mb-2 text-primary"><%= article.category.name if article.category %></strong>
       <h3 class="mb-0"><%= article.title%></h3>
       <div class="my-1 text-muted">
-        <%= m_d_comma_y(article.created_at) %> by
+        <%= m_d_comma_y(article.created_at) %> <%= t('app.word.by')%>
         <span class="text-secondary fw-bold"><%= sub_masked_email(article.user.email) if article.user %></span>
       </div>
       <p class="card-text mb-auto"><%= truncate(article.body, length: 150) %></p>
-      <%= link_to "See more...", article, class:"stretched-link" %>
+      <%= link_to t('articles.see_more'), article, class:"stretched-link" %>
     </div>
     
     <div class="col-auto d-none d-lg-block">
