--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,5 +1,5 @@
-<h2>Resend confirmation instructions</h2>
-<hr>
+<h2><%= t(".resend_confirmation_instructions") %></h2>
+
 <%= simple_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
   <%= f.error_notification %>
   <%= f.full_error :confirmation_token %>
@@ -13,8 +13,8 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Resend confirmation instructions", class: 'btn btn-lg btn-primary' %>
+    <%= f.button :submit, t(".resend_confirmation_instructions") %>
   </div>
 <% end %>
-<hr>
+
 <%= render "devise/shared/links" %>
