--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,5 +1,5 @@
-<h2>Forgot your password?</h2>
-<hr>
+<h2><%= t(".forgot_your_password") %></h2>
+
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= f.error_notification %>
 
@@ -11,8 +11,8 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions", class: 'btn btn-lg btn-primary' %>
+    <%= f.button :submit, t(".send_me_reset_password_instructions") %>
   </div>
 <% end %>
-<hr>
+
 <%= render "devise/shared/links" %>
