--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -20,7 +20,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, t(".change_my_password") %>
+    <%= f.button :submit, t(".change_my_password"), class: 'btn btn-lg btn-primary' %>
   </div>
 <% end %>
 
