--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<h2><%= t(".title", resource: devise_i18n_fix_model_name_case(resource.model_name.human, i18n_key: "registrations.edit.title")) %></h2>
+<h1 class="mt-3"><%= t(".title", resource: devise_i18n_fix_model_name_case(resource.model_name.human, i18n_key: "registrations.edit.title")) %></h1>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
@@ -27,9 +27,9 @@
     <%= f.button :submit, t(".update"), class: 'btn btn-lg btn-primary' %>
   </div>
 <% end %>
-
+<hr>
 <h3><%= t(".cancel_my_account") %></h3>
 
-<div><%= t(".unhappy") %> <%= button_to t(".cancel_my_account"), registration_path(resource_name), data: { confirm: t(".are_you_sure"), turbo_confirm: t(".are_you_sure") }, method: :delete %></div>
+<div><p><%= t(".unhappy")%></p> <%= button_to t(".cancel_my_account"), registration_path(resource_name), data: { confirm: t(".are_you_sure"), turbo_confirm: t(".are_you_sure") }, method: :delete, class:'btn btn-danger' %></div>
 
-<%= link_to t("devise.shared.links.back"), :back %>
+<%= link_to t("devise.shared.links.back"), :back, class: 'btn btn-secondary my-2' %>
