--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,7 @@ body{
 }
 
 /* Animações */
-@keyframes fadeInDown {
+/* @keyframes fadeInDown {
     from{
         opacity: 0.5;
         transform: translateY(-60px);
@@ -77,4 +77,4 @@ body{
 
 .popUp{
     animation: popUp 1.5s !important;
-}
+} */
