--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,3 +1,3 @@
-<h1>Editar Artigo <%= @article.id %></h1>
+<h1 class="mt-3"><%= t('app.edit.title', model: Article.model_name.human) %> <%= @article.id %></h1>
 
 <%= render 'form', article: @article %>
