--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,7 +4,7 @@
     <strong class="d-inline-block text-primary"><%= @article.category.name if @article.category %></strong>
     
     <p class="blog-post-meta">
-        <%= m_d_comma_y(@article.created_at) %> by 
+        <%= m_d_comma_y(@article.created_at) %> <%= t('app.word.by') %> 
         <span class="text-secondary fw-bold"><%= sub_masked_email(@article.user.email) if @article.user %></span>
     </p>
     
@@ -18,19 +18,19 @@
         <div class="buttons">
             <% if policy(@article).edit?%>
                 <%= link_to edit_article_path, class: "button-link text-decoration-none" do %>
-                    <button type="button" class="btn btn-primary">Edit article</button>
+                    <button type="button" class="btn btn-lg btn-primary"><%= t('app.button.edit') %></button>
                 <% end %>
             <% end %>
     
             <% if policy(@article).destroy?%>
-                <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                    Delete article
+                <button type="button" class="btn btn-lg btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    <%= t('app.button.destroy') %>
                 </button>
             <% end %>
         </div>
         <div class="back-btn">
             <%= link_to root_path  do%>
-                <button type="button" class="btn btn-lg btn-secondary">Back</button>
+                <button type="button" class="btn btn-lg btn-secondary"><%= t('app.button.back') %></button>
             <% end %>
         </div>
     </div>
@@ -39,7 +39,7 @@
 
 <div class="popIn">
     <!-- Listagem de comentários -->
-    <h2 class="mt-5 mb-3">Comments:</h2>
+    <h2 class="mt-5 mb-3"><%= t('.comments') %></h2>
     <% @article.comments.each do |comment|%>
         <%= render 'comments/comment', comment: comment %>
     <% end %>
@@ -47,7 +47,7 @@
     <hr class="mt-4 mb-2">
 
     <!-- Adicionar comentário -->
-    <strong class="fs-5 text-secondary">Add your comment:</strong>
+    <strong class="fs-5 text-secondary"><%= t('.add_comment') %></strong>
     <%= render 'comments/form' %>
 </div>
 
@@ -56,15 +56,15 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
         <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Delete article</h5>
+            <h5 class="modal-title" id="exampleModalLabel"><%= t('app.button.destroy') %></h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-            Do you really want to delete the article?
+            <%= t('app.message.confirm_destroy') %>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn bg-gradient bg-secondary text-light" data-bs-dismiss="modal">No</button>
-            <%= link_to "Yes", article_path(@article), method: :delete, class: "btn bg-gradient bg-danger text-light" %>
+            <button type="button" class="btn bg-gradient bg-secondary text-light" data-bs-dismiss="modal"><%= t('app.word.no') %></button>
+            <%= link_to t('app.word.yes'), article_path(@article), method: :delete, class: "btn bg-gradient bg-danger text-light" %>
         </div>
         </div>
     </div>
