--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "New category" %>
 
-<h1>New category</h1>
+<h1 class="mt-3"><%= t '.title' %></h1>
 
 <%= render "form", category: @category %>
 
