--- a/app/views/layouts/_topnavbar.html.erb
+++ b/app/views/layouts/_topnavbar.html.erb
@@ -1,6 +1,6 @@
 <div class="container fadeInDown">
   <header class="border-bottom lh-1 py-3">
-    <div class="row flex-nowrap justify-content-between align-items-center">
+    <div class="top-nav row flex-nowrap justify-content-between align-items-center">
       <% if policy(:category).index? %>
         <!-- Feature do pundit que apenas fornece acesso as categorias
             se o usuário tiver acesso ao index (se admin for true)  -->
