--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,31 +1,76 @@
 <%= simple_form_for @article do |form| %>
-  <% if @article.errors.any? %>
-    <div class="alert alert-danger">
-      <ul>
-        <% @article.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
+    <% if @article.errors.any? %>
+      <div class="alert alert-danger">
+        <ul>
+          <% @article.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div>
+      <%= form.input :title, input_html: { class: "form-control #{'is-invalid' if @article.errors[:title].any?}" } %>
     </div>
-  <% end %>
 
-  <div>
-    <%= form.input :title, input_html: { class: "form-control #{'is-invalid' if @article.errors[:title].any?}" } %>
-  </div>
+    <div>
+      <%= form.input :body, input_html: { rows: 10, class: "form-control #{'is-invalid' if @article.errors[:body].any?}" } %>
+    </div>
 
-  <div>
-    <%= form.input :body, input_html: { rows: 10, class: "form-control #{'is-invalid' if @article.errors[:body].any?}" } %>
-  </div>
-  <div>
-    <!-- O atributo collection filtra para que as categorias aparecam em ordem alfabética -->
-    <%= form.association :category, collection: @categories, prompt: t('articles.form.choose_category'),input_html: { class: "form-control" } %>
-  </div>
+    <div>
+      <%= form.association :category, collection: @categories, prompt: t('articles.form.choose_category'), input_html: { class: "form-control" } %>
+    </div>
 
-  <br>
+    <br>
 
-  <p>
-    <%= form.button :submit, class: 'btn btn-primary' %>
-    <%= link_to t('app.button.back'), articles_path, class: 'btn btn-secondary' %>
-  </p>
-
+    <p>
+      <%= form.button :submit, class: 'btn btn-primary' %>
+      <%= link_to t('app.button.back'), articles_path, class: 'btn btn-secondary' %>
+    </p>
 <% end %>
+
+<hr>
+
+<h4><%= t('articles.upload.title') %></h4>
+<%= form_with url: '#', local: false, method: :post, html: { enctype: "multipart/form-data", id: "upload-form" } do |upload_form| %>
+  <div class="form-group">
+    <%= upload_form.file_field :file, class: "form-control", id: "file-input" %>
+  </div>
+  <div class="form-group">
+    <br>
+    <%= upload_form.submit t('articles.upload.upload_button'), class: "btn btn-secondary", id: "upload-button" %>
+  </div>
+<% end %>
+
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    const uploadForm = document.getElementById('upload-form');
+    const fileInput = document.getElementById('file-input');
+    const bodyTextArea = document.querySelector('textarea[name="article[body]"]');
+  
+    uploadForm.addEventListener('submit', function (event) {
+      event.preventDefault();
+  
+      const file = fileInput.files[0];
+      if (file) {
+        const reader = new FileReader();
+        reader.onload = function(e) {
+          bodyTextArea.value = e.target.result;  // Coloca o conteúdo do arquivo no campo :body
+        };
+        reader.readAsText(file);  // Lê o arquivo como texto
+      } else {
+        // Criação do flash message
+        const flashMessage = document.createElement('div');
+        flashMessage.className = 'alert alert-danger';
+        flashMessage.innerHTML = 'Por favor, adicione um arquivo antes de enviar.';
+        
+        // Insere a mensagem de erro no topo da página
+        document.body.insertBefore(flashMessage, document.body.firstChild); 
+  
+        // Foca no alert
+        flashMessage.scrollIntoView({ behavior: 'smooth', block: 'start' });
+        flashMessage.focus();
+      }
+    });
+  });
+</script>
